Prepare multiple development environments

--- a/nginx/osticket-develop_nginx.conf
+++ b/nginx/osticket-develop_nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/osticket-v1.18.1;
+    root /var/www/osticket-develop;
     index index.php index.html;
     # https://www.nginx.com/resources/wiki/start/topics/recipes/osticket/
     keepalive_timeout 70;
